# meteo-web-page

./: .env  .gitignore  Dockerfile  meteo_data.db  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  python-package.yml
src/meteo-web-page/: app.py  meteo_data.db  test_db_connect.py  update_db.py
src/meteo-web-page/templates/: index.html
src/meteo_web_page/: main.py
src/meteo_web_page/api/: data_update.py
src/meteo_web_page/db/: database.py
src/meteo_web_page/templates/: index.html
