[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo_web_page"
version = "0.0.0"
description = "Display meteo data from api"
readme = "README.md"
authors = [
    {name = "Konstantin Verner"},
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "flask==3.0.3",
    "numpy==1.26.4",
    "pandas==2.0.3",
    "requests",
    "mysql-connector-python",
    "urllib3==1.26.6",
    "python-dotenv"
]
